# https-github.com-S4LL77-uk-real-estate-analytics

./: .env.example  .gitignore  DECISIONS.md  Makefile  PRESENTATION_GUIDE.md  README.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dbt_test.yml
.streamlit/: config.toml
api/: database.py  main.py
api/routers/: analytics.py  predict.py
app/: app.py
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/marts/: dim_location.sql  fct_transactions.sql
dbt_project/models/staging/: schema.yml  stg_boe_rates.sql  stg_land_registry.sql
dbt_project/snapshots/: property_snapshot.sql
ingestion/: boe_rates.py  config.py  land_registry.py  ons_demographics.py
ingestion/utils/: __init__.py  logging_config.py  s3_client.py
orchestration/dags/: uk_property_pipeline.py
orchestration/plugins/: slack_alerts.py
snowflake/setup/: 01_databases.sql  02_warehouses.sql  03_roles.sql  04_stages.sql  05_masking_policies.sql
terraform/: main.tf  snowflake_resources.tf
tests/: test_boe_ingestion.py  test_ingestion.py  test_ons_ingestion.py
