[project]
name = "uk-real-estate-analytics"
version = "0.1.0"
description = "End-to-end data engineering pipeline for UK real estate market analytics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
]

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S603", "S607"]  # subprocess security — false positives for data scripts

[tool.ruff.isort]
known-first-party = ["ingestion"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
